--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ otp_release:
   - 17.0
 before_install:
   - git clone https://github.com/elixir-lang/elixir
+  - git checkout v1.0
   - cd elixir && make && cd ..
 before_script: "export PATH=`pwd`/elixir/bin:$PATH"
 script: "mix do local.hex --force, deps.get && mix test"
